lý do thêm code ThongNC

--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
 <section>fdsfsdfds
     fdsfsdfdsd
     <div>fdsfsdfds</div>
+    <div>ThongNC</div>
+    <div class="da">ThongNC da cap nhat</div>
 </section>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
